--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-# Created 2020-01-30 Чт 18:54
+# Created 2020-01-30 Чт 21:20
 #+TITLE: grammarbot
 #+AUTHOR: Zajcev Evgeny
 #+startup: showall
@@ -18,6 +18,7 @@ either buffer or active region.
 * Customizable Options
 
 - User Option: ~grammarbot-language~
+
   Language to use.
 
   Default value: "en-US"
@@ -26,7 +27,9 @@ either buffer or active region.
   ("en-US" or "en-GB").
 
 - User Option: ~grammarbot-api-key~
-  Your API Key uptained from http://grammarbot.io.
+
+  Your API Key obtained from http://grammarbot.io.
 
 - User Option: ~grammarbot-accept-single-choice-rules~
+
   List of rules for issues to automatically accept single choice replacement.
